# fastapi-greatexpectations

./: .env  .gitignore  .secrets  Dockerfile  LICENSE  Makefile  Pipfile  README.md  config.ini  docker-compose.yml  gx.env  logger.ini  pyproject.toml  requirements.txt
.github/workflows/: build-and-test.yml
app/: config.py  database.py  gen_models.py  gen_models_declarative.py  gx_data_test.py  gx_sql.py  json.json  logging.py  main.py  scripts.py  service.py  utils.py
app/api/v1/: __init__.py  database.py  expectation.py  validation.py
app/models/: __init__.py  base.py  expectation.py  validation.py
app/schemas/: expectation.py  validation.py
app/utils/: logging.py
db/: Dockerfile  create.sql
sqlserver/: Dockerfile
sqlserver/setup/: default.sql  restore-ci.sql  restore.sql  verify.sql
tests/: conftest.py
tests/api/: test_database.py  test_expectations.py  wip_test_expectations.py
