[tool.poetry]
name = "fastapi-greatexpectations"
version = "0.0.1"
description = ""
authors = ["Jakub Miazek <the@grillazz.com>"]
readme = "README.md"
packages = [{include = "fastapi_greatexpectations"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = { extras = ["all"], version = "0.95.0" }
sqlacodegen = "2.3.0.post1"
great-expectations = { extras = ["postgresql"], version = "0.16.12" }
ipython = "^8.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
