[tool.poetry]
name = "fastapi-greatexpectations"
version = "0.1.0"
description = ""
authors = ["Jakub Miazek <the@grillazz.com>"]
readme = "README.md"
packages = [{include = "fastapi_greatexpectations"}]

[tool.poetry.dependencies]
python = "^3.10"
ipython = "*"
fastapi = { extras = ["all"], version = "0.95.0" }
sqlacodegen = "2.3.0.post1"
great-expectations = { extras = ["postgresql"], version = "0.16.12" }
rich = "^13.3.5"
black = "^23.3.0"
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
coveralls = "^3.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
