[tool.poetry]
name = "fastapi-greatexpectations"
version = "0.1.0"
description = ""
authors = ["Jakub Miazek <the@grillazz.com>"]
readme = "README.md"
packages = [{include = "fastapi_greatexpectations"}]

[tool.poetry.dependencies]
python = "^3.11"
ipython = "*"
fastapi = { extras = ["all"], version = "0.99.1" }
sqlacodegen = "2.3.0.post1"
great-expectations = { extras = ["mssql"], version = "0.17.12" }
rich = "^13.5.2"
black = "^23.7.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pyodbc = "^4.0.39"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
